--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" initial scale="1.0">
-    <link rel="stylesheet" href="./CSS/landingpage.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <!-- Landing page -->
     <div class="nav">
-        <h2>COOK<span>-IT</span>-ALL</h2>
+        <h2> HABIB~DELICACIES </h2>
         <div class="navbar">
             <nav>
                 <ul>
                     <li>
-                        <a href="./HTML/breakfast.html" class="button">Breakfast</a>
+                        <a href="/html/breakfast.html" class="button">Breakfast</a>
                     </li>
                     <li>
-                        <a href="./HTML/lunch.html" class="button">Lunch</a>
+                        <a href="/html/lunch.html" class="button">Lunch</a>
                     </li>
                     <li>
-                        <a href="./HTML/dinner.html" class="button">Dinner</a>
+                        <a href="/html/dinner.html" class="button">Dinner</a>
                     </li>
                     <li>
-                        <a href="./HTML/randomrecipe.html" class="button">Random</a>
+                        <a href="/html/randomrecipe.html" class="button">Random</a>
                     </li>
                 </ul>
             </nav>
