--- a/html/breakfast.html
+++ b/html/breakfast.html
@@ -18,7 +18,7 @@
             <div class="row text-center">
             <div class="col-md-4 main" id="pancake">
             <div class="hide-pancake-image">
-            <img src="../IMAGES/breakimages/pancakes.jpg" alt="breakfast image." style="width: 250px;height: 300px;">
+            <img src="../images/breakfast/pancakes.jpg" alt="breakfast image." style="width: 250px;height: 300px;">
             </div>
     <p>PANCAKES</p>
     <p style="color: brown;" class="hide" id="pancake-showing">
@@ -60,7 +60,7 @@
 
     <div class="col-md-4" id="cake">
         <div class="hide-cake-image">
-        <img src="../IMAGES/breakimages/cupcakes.webp" alt="breakfast image" style="width: 300px;height: 300px;">
+        <img src="../images/breakfast/cupcakes.jpeg" alt="breakfast image" style="width: 300px;height: 300px;">
         </div>
         <p> CUP CAKES</p>
         <p class="hide" id="cake-showing" style="color: brown;">
@@ -100,7 +100,7 @@
                 </div>
             <div class="col-md-4" id="mandazi">
                 <div class="hide-mandazi">
-                <img src="../IMAGES/breakimages/mandazi.jpg" alt="breakfast image."style="width: 300px;height: 300px;">
+                <img src="../images/breakfast/mandazi.jpg" alt="breakfast image."style="width: 300px;height: 300px;">
                 </div>  
                 <p>MANDAZI</p>
                 <p class="hide" id="mandazi-showing" style="color: brown;">
@@ -143,7 +143,7 @@
                 <div class="row text-center">
                 <div class="col-md-4 main" id="sausage">
                 <div class="hide-sausage-image">
-                <img src="../IMAGES/breakimages/sausages.jpg" alt="breakfast image "style="width: 250px;height: 250px;">
+                <img src="../images/breakfast/sausages.jpg" alt="breakfast image "style="width: 250px;height: 250px;">
                 </div>
                 <p>SAUSAGES</p>
                 <p class="hide" id="sausage-showing" style="color: brown;">
@@ -164,7 +164,7 @@
 
                 <div class="col-md-4" id="waffles">
                 <div class="hide-waffles-image">
-                <img src="../IMAGES/breakimages/waffles.jpg" alt="breakfast image."style="width: 250px;height: 300px;">
+                <img src="../images/breakfast/waffles.jpg" alt="breakfast image."style="width: 250px;height: 300px;">
                 </div>
                 <p>WAFFLES</p>
                 <p class="hide" id="waffles-showing" style="color: brown;">
@@ -193,7 +193,7 @@
                 </div>
                 <div class="col-md-4" id="eggs">
                     <div class="hide-eggs-image">
-                    <img src="../IMAGES/breakimages/eggs.jpg" alt="breakfast image."style="width: 250px;height: 300px;">
+                    <img src="../images/breakfast/eggs.jpg" alt="breakfast image."style="width: 250px;height: 300px;">
                     </div>  
                     <p>EGGS</p>
                     <p class="hide" id="eggs-showing" style="color: brown;">
@@ -218,7 +218,7 @@
         <div class="row text-center">
             <div class="col-md-4 main" id="donuts">
                 <div class="hide-donuts-image">
-                    <img src="../IMAGES/breakimages/donuts.jpg" alt="breakfast recipe."style="width: 250px;height: 290px;">
+                    <img src="../images/breakfast/donuts.jpg" alt="breakfast recipe."style="width: 250px;height: 290px;">
                 </div>
                     <p>DONUTS</p>
                     <p class="hide" id="donuts-showing" style="color: brown;">
@@ -271,7 +271,7 @@
                 </div>
                 <div class="col-md-4" id="Potatoes">
                 <div class="hide-Potatoes-image">
-                    <img src="../IMAGES/breakimages/sausage and potato mash.jpg" alt="breakfast recipe."style="width: 300px;height: 300px;">
+                    <img src="../images/breakfast/sausage and potato mash.jpg" alt="breakfast recipe."style="width: 300px;height: 300px;">
                 </div>
                     <p>POTATOES</p>
                     <p class="hide" id="Potatoes-showing" style="color: brown;">
@@ -304,7 +304,7 @@ Pour remaining 2 tablespoons of oil into the skillet and turn heat to medium-hig
                 </div>
                 <div class="col-md-4" id="tea">
                 <div class="hide-tea-image">
-                    <img src="../IMAGES/breakimages/tea.jpg" alt="breakfast recipe."style="width: 250px;height: 250px;">
+                    <img src="../images/breakfast/tea.jpg" alt="breakfast recipe."style="width: 250px;height: 250px;">
                 </div>  
                     <p>TEA</p>
                     <p class="hide" id="tea-showing" style="color: brown;">
