--- a/html/lunch.html
+++ b/html/lunch.html
@@ -22,7 +22,7 @@
             <div class="col-md-4 main" id="chapati">
                 <div class="hide-chapati-image">
                     <div class="card" style="width: 18rem;">
-                        <img src="../IMAGES/pictures/chapati.jpeg" alt="lunch image.">
+                        <img src="../images/lunch/chapati.jpg" alt="lunch image.">
 
                         <div class="card-body">
                             <p class="card-text">CHAPATI</p>
