--- a/html/lunch.html
+++ b/html/lunch.html
@@ -64,7 +64,7 @@
             <div class="col-md-4" id="fries">
                 <div class="hide-fries-image">
                     <div class="card" style="width: 18rem;">
-                        <img src="../IMAGES/pictures/fries.webp" alt="lunch image">
+                        <img src="../images/lunch/fries.jpeg" alt="lunch image">
 
                         <div class="card-body">
                             <p class="card-text">POTATO FRIES</p>
@@ -111,7 +111,7 @@
             <div class="col-md-4" id="chicken">
                 <div class="hide-chicken">
                     <div class="card" style="width: 18rem; height: 100%;">
-                        <img src="../IMAGES/pictures/kuku.jpeg" alt="lunch image.">
+                        <img src="../images/lunch/kuku.jpeg" alt="lunch image.">
 
                         <div class="card-body">
                             <p class="card-text"> FRIED CHICKEN</p>
@@ -166,7 +166,7 @@
                 <div class="col-md-4 main" id="curry">
                     <div class="hide-curry-image">
                         <div class="card" style="width: 18rem;">
-                            <img src="../IMAGES/pictures/fries.webp" alt="lunch image.">
+                            <img src="../images/lunch/potato_curry.jpg" alt="lunch image.">
                             <div class="card-body">
                                 <p class="card-text"> POTATO CURRY</p>
                             </div>
@@ -218,7 +218,7 @@
                     <div class="hide-pilau-image">
                         <div class="card" style="width: 18rem;">
 
-                            <img src="../IMAGES/pictures/pilaau3.jpeg" alt="lunch image.">
+                            <img src="../images/lunch/pilaupexel.jpeg" alt="lunch image.">
 
                             <div class="card-body">
                                 <p class="card-text">PILAU</p>
@@ -274,7 +274,7 @@
                 <div class="col-md-4" id="salmon">
                     <div class="hide-salmon-image">
                         <div class="card" style="width: 18rem;">
-                            <img src="../IMAGES/pictures/salmo2.jpeg" alt="lunch image.">
+                            <img src="../images/lunch/salmon.jpeg" alt="lunch image.">
 
                             <div class="card-body">
                                 <p class="card-text"> SALMON</p>
@@ -335,7 +335,7 @@
                     <div class="col-md-4 main" id="burger">
                         <div class="hide-burger-image">
                             <div class="card" style="width: 18rem;">
-                                <img src="../IMAGES/pictures/burger.jpeg" alt="lunch recipe.">
+                                <img src="../images/lunch/burger.jpeg" alt="lunch recipe.">
 
                                 <div class="card-body">
                                     <p class="card-text">BURGER</p>
@@ -384,7 +384,7 @@
                     <div class="col-md-4" id="pasta">
                         <div class="hide-pasta-image">
                             <div class="card" style="width: 18rem;">
-                                <img src="../IMAGES/pictures/pasta.jpeg" alt="lunch recipe.">
+                                <img src="../images/lunch/pasta.jpeg" alt="lunch recipe.">
 
                                 <div class="card-body">
                                     <p class="card-text"> EGGPLANT PASTA</p>
@@ -427,7 +427,7 @@
                     <div class="col-md-4" id="spag">
                         <div class="hide-spag-image">
                             <div class="card" style="width: 18rem;">
-                                <img src="../IMAGES/pictures/spaghii.jpeg" alt="lunch recipe.">
+                                <img src="../images/lunch/spaghetti.jpeg" alt="lunch recipe.">
 
                                 <div class="card-body">
                                     <p class="card-text">SPAGHETTI BOLOGNAISE</p>
