--- a/html/dinner.html
+++ b/html/dinner.html
@@ -20,7 +20,7 @@
             <div class="col-md-4 main" id="casserole">
                 <div class="hide-casserole-image">
                     <div class="card" style="width: 18rem;">
-                        <img src="../IMAGES/Dinner images/Casserole.PNG" alt="dinner image.">
+                        <img src="../images/dinner/casserole.PNG" alt="dinner image.">
                         <div class="card-body">
                             <p class="card-text">CASSEROLE</p>
                         </div>
@@ -52,7 +52,7 @@
             <div class="col-md-4" id="fish">
                 <div class="hide-fish-image">
                     <div class="card" style="width: 18rem";>
-                        <img src="../IMAGES/Dinner images/fish.PNG" alt="dinner image.">
+                        <img src="../images/dinner/fish.PNG" alt="dinner image.">
                         <div class="card-body">
                             <p class="card-text">FISH</p>
                         </div>
@@ -86,7 +86,7 @@
             <div class="col-md-4" id="ndengu">
                 <div class="hide-ndengu">
                     <div class="card" style="width: 18rem;">
-                        <img src="../IMAGES/Dinner images/ndengu.PNG" alt="dinner image.">
+                        <img src="../images/dinner/ndengu.PNG" alt="dinner image.">
                         <div class="card-body">
                             <p class="card-text"> NDENGU</p>
                         </div>
@@ -130,7 +130,7 @@
                 <div class="col-md-4 main" id="pasta">
                     <div class="hide-pasta-image">
                         <div class="card" style="width: 18rem;">
-                            <img src="../IMAGES/Dinner images/pasta.PNG" alt="dinner image.">
+                            <img src="../images/dinner/pasta.PNG" alt="dinner image.">
                             <div class="card-body">
                                 <p class="card-text">pasta</p>
                             </div>
@@ -162,7 +162,7 @@
 <div class="col-md-4" id="chicken">
                     <div class="hide-chicken-image">
                         <div class="card" style="width: 18rem;">
-                            <img src="../IMAGES/Dinner images/chicken.PNG" alt="dinner image.">
+                            <img src="../images/dinner/chicken.PNG" alt="dinner image.">
                             <div class="card-body">
                                 <p class="card-text">CHICKEN</p>
                             </div>
@@ -203,7 +203,7 @@
                 <div class="col-md-4 main" id="mexicanlasagna">
                     <div class="hide-mexican lasagna-image">
                         <div class="card" style="width: 18rem;">
-                            <img src="../IMAGES/Dinner images/Mexican Lasagna.PNG" alt="dinner recipe.">
+                            <img src="../images/dinner/mexican lasagna.PNG" alt="dinner recipe.">
                             <div class="card-body">
                                 <p class="card-text">MEXICAN LASAGNA</p>
                             </div>
@@ -252,7 +252,7 @@
         <div class="col-md-4 main" id="pork">
             <div class="hide-pork-image">
                 <div class="card" style="width: 18rem;">
-                    <img src="../IMAGES/Dinner images/pork.PNG" alt="dinner recipe.">
+                    <img src="../images/dinner/pork.PNG" alt="dinner recipe.">
                     <div class="card-body">
                         <p class="card-text">PORK</p>
                     </div>
@@ -295,7 +295,7 @@
         <div class="col-md-4" id="beans">
             <div class="hide-beans-image">
                 <div class="card" style="width: 18rem;">
-                    <img src="../IMAGES/Dinner images/beans.PNG" alt="dinner recipe.">
+                    <img src="../images/dinner/beans.PNG" alt="dinner recipe.">
                     <div class="card-body">
                         <p class="card-text"> BEANS</p>
                     </div>
@@ -327,7 +327,7 @@
         <div class="col-md-4" id="githeri">
             <div class="hide-githeri-image">
                 <div class="card" style="width: 18rem;">
-                    <img src="../IMAGES/Dinner images/githeri.PNG" alt="dinner recipe.">
+                    <img src="../images/dinner/githeri.PNG" alt="dinner recipe.">
                     <div class="card-body">
                         <p class="card-text">GITHERI</p>
                     </div>
