--- a/html/randomrecipe.html
+++ b/html/randomrecipe.html
@@ -37,7 +37,7 @@
             <div class="col-md-7">
                 <div id="randomCard" class="card" style="width: 34rem;">
                     <div id="randomImage">
-                        <img src="../IMAGES/randomrecipe/card3.jpg" class="card-img-top" id="initial">
+                        <img src="../images/random/card3.jpg" class="card-img-top" id="initial">
                     </div>
                     <div class="card-body">
                         <h4 id="randomMeal" class="card-title"></h4>
