--- a/html/randomrecipe.html
+++ b/html/randomrecipe.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>random recipe</title>
+    <title> Random Recipes </title>
     <!-- JS LINKS -->
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -14,7 +14,7 @@
     <!-- boxicons -->
     <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
     <!-- my js -->
-    <script src="../JS/randomrecipe.js"></script>
+    <script src="../js/randomrecipe.js"></script>
 
     <!-- CSS LINKS -->
     <!-- bootstrap -->
@@ -23,7 +23,7 @@
     <!-- boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <!-- my css -->
-    <link rel="stylesheet" href="../CSS/randomrecipe.css">
+    <link rel="stylesheet" href="../css/randomrecipe.css">
 
 </head>
 
