--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" initial scale="1.0">
+    <title>Habib Delicacies</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -26,7 +27,7 @@
                         <a href="/html/dinner.html" class="button">Dinner</a>
                     </li>
                     <li>
-                        <a href="/html/randomrecipe.html" class="button">Random</a>
+                        <a href="/html/randomrecipe.html" class="button">Random Recipe</a>
                     </li>
                 </ul>
             </nav>
@@ -44,9 +45,9 @@
     </div>
     <h3 style="color: #fff; padding-top: 5rem; font-size: 30px;">Follow us:</h3>
     <div class="footer">
-        <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
-        <a href="https://twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
-        <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.instagram.com/makanda._.milka" class="fa fa-instagram" target="_blank" ></a>
+        <a href="https://github.com/Mk1806" class="fa fa-github" target="_blank" ></a>
+        <a href="https://www.linkedin.com/in/makanda-milka-a6a2331b6/" class="fa fa-linkedin" target="_blank" ></a> 
     </div>
 </body>
 </body>
