--- a/html/breakfast.html
+++ b/html/breakfast.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kitchen recipes</title>
+    <title> Breakfast Recipes </title>
     <link rel="stylesheet" href="../css/breakfast.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -334,7 +334,7 @@ Pour remaining 2 tablespoons of oil into the skillet and turn heat to medium-hig
             </div>
 
              <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-                <script src="../JS/breakfast.js"></script>         
+                <script src="../js/breakfast.js"></script>         
         
         
     </body>
