--- a/html/dinner.html
+++ b/html/dinner.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kitchen recipes</title>
+    <title> Dinner Recipes</title>
     <link rel="stylesheet" href="../css/dinner.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -361,6 +361,6 @@
 <div>
             </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="../JS/dinner.js"></script>
+    <script src="../js/dinner.js"></script>
 </body>
 </html>
