--- a/html/lunch.html
+++ b/html/lunch.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kitchen recipes</title>
+    <title> Lunch Recipes </title>
     <link rel="stylesheet" href="../css/lunch.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -469,7 +469,7 @@
             <div>
             </div>
                 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-                <script src="../JS/lunch.js"></script>
+                <script src="../js/lunch.js"></script>
             
 </body>
 
