--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="home">
-        <h1 style="color: pink; font-size: 45px;"><strong>Welcome To<br> Cook-it-all recipes!!</strong></h1>
+        <h1 style="color: pink; font-size: 45px;"><strong>Welcome To<br> Habib Delicacies!!</strong></h1>
         <div id="about-us" class="text-center">
             <div class="form">
             <p style="color: #fff; font-size: 30px; font-weight: 300;">
